mid: 0000204 msg: Permetre importar els valors d'una enumeració des d'un fitxer
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@327 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -220,6 +220,7 @@ info.entorn.reindexat=Els expedients de l'entorn s'han reindexat correctament
 
 info.enum.guardat=L'enumeració s'ha guardat correctament
 info.enum.esborrat=L'enumeració s'ha esborrat correctament
+info.enum.valors.importats=Els valors s'han importat correctament
 
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.expedient.anulat=L'expedient s'ha anul·lat correctament
@@ -795,6 +796,10 @@ enumeracio.llistat.valors=Valors
 enumeracio.llistat.nova=Nova enumeració
 
 enumeracio.valors.confirmacio=Estau segur que voleu esborrar aquest valor?
+enumeracio.valors.import_dades=Importació de dades
+enumeracio.valors.mostrar_ocultar=Mostrar/Ocultar
+enumeracio.valors.arxiu_exp=Arxiu a importar
+enumeracio.valors.importar=Importar
 
 exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
 exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
