mid: 0000205 msg: Permetre configurar la informació dels càrrecs depenent del grup al qual pertanyen
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@328 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -50,6 +50,7 @@ error.esborrar.persona.area=No s'ha pogut esborrar la persona
 error.exist.arees.depenen=No es pot esborrar aquest tipus perquè existeixen àrees que hi depenen
 error.esborrar.areatipus=No s'ha pogut esborrar el tipus d'àrea
 
+error.esborrar.infoarea=No s'ha pogut esborrar la informació de l'area
 error.esborrar.infocarrec=No s'ha pogut esborrar la informació del càrrec
 
 error.validacio=S'han produit errors de validació
