--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -153,6 +153,9 @@ info.carrec.esborrat=El càrrec s'ha esborrat correctament
 info.infocarrec.guardat=La informació del càrrec s'ha guardat correctament
 info.infocarrec.esborrat=La informació del càrrec s'ha esborrat correctament
 
+info.infoarea.guardat=La informació de l'àrea s'ha guardat correctament
+info.infoarea.esborrat=La informació de l'àrea s'ha esborrat correctament
+
 etiqueta.exp.id=Id de l'expedient
 etiqueta.exp.numero=Número d'expedient
 etiqueta.exp.titol=Títol de l'expedient
@@ -364,6 +367,7 @@ comuns.variables=Variables
 comuns.anular=Anul·lar
 comuns.guardar=Guardar
 comuns.adjunts=Adjunts
+comuns.grup=Grup
 
 comuns.camps_marcats=Els camps marcats amb
 comuns.camp_oblig=Camp obligatori
@@ -419,14 +423,14 @@ areatipus.llistat.nou=Nou tipus d'àrea
 carrec.form.crear_nou=Crear nou càrrec
 carrec.form.modificar=Modificar càrrec
 
-carrec.jbpmbuits.confirmacio=Estau segur que voleu esborrar la informació d'aquest càrrec?
-
-carrec.jbpmconf.confirmacio=Estau segur que voleu esborrar la informació d'aquest càrrec?
-
-carrec.jbpmform.informacio=Informació del càrrec
+carrec.jbpmid.confirmacio=Estau segur que voleu esborrar la informació d'aquest càrrec?
+carrec.jbpmid.informacio=Informació del càrrec
 
 carrec.llistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 carrec.llistat.nou_carrec=Nou càrrec
+
+area.jbpmid.confirmacio=Estau segur que voleu esborrar la informació d'aquesta àrea?
+area.jbpmid.informacio=Informació de l'àrea
 
 common.campfiltre.entre=Entre
 common.campfiltre.i=i
@@ -459,6 +463,8 @@ common.icon.entrada=Entrada
 common.icon.sortida=Sortida
 common.icon.numero=Número
 
+common.tabsarees.configurats=Configurades
+common.tabsarees.sense_conf=Sense configurar
 common.tabscarrecs.configurats=Configurats
 common.tabscarrecs.sense_conf=Sense configurar
 
