mid: 0000207 msg: El mètode per mostrar errors de validació a un Handler provoca una traça d'error
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@330 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -186,6 +186,7 @@ error.validar.signatura=Error en la validació de la signatura
 error.rebre.signatura=Error rebent la signatura del document
 
 error.finalitzar.tasca=Error al finalitzar la tasca
+error.validacio.tasca=Error de validació en la tasca
 
 error.especificar.dest.delegacio=No ha especificat cap destinatari per a la delegació
 
