mid: 0000212 msg: Ordenació del llistat de consultes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@336 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -210,6 +210,7 @@ error.ordre.enumeracio=No s'ha pogut modificar l'ordre
 error.consulta.informe.nonhiha=Aquesta consulta no té configurat cap informe
 error.consulta.informe.nofiltre=Seleccioni primer una consulta
 error.consulta.tipexp.noaut=No està autoritzat per a consultar aquest tipus d'expedient
+error.ordre.consulta=No s'ha pogut modificar l'ordre
 
 ##
 # Missatges d'error del package net.conselldemallorca.helium.core.model.service
