mid: 0000181 msg: Possibilitat d'especificar els usuaris permesos per executar una acció a dins l'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@339 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -580,6 +580,9 @@ decorators.superior.reassignacions=Reassignacions
 
 defproc.accform.selec_hand=Seleccioni un handler
 defproc.accform.handler=Handler
+defproc.accform.publica=Execució pública
+defproc.accform.oculta=Ocultar acció
+defproc.accform.cron=Expressió cron per execució "batch"
 
 defproc.accllistat.confirmacio=Estau segur que voleu esborrar aquesta acció?
 defproc.accllistat.handler=Handler
