mid: 0000182 msg: Tramitació massiva de tasques dels expedients
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@340 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -229,7 +229,7 @@ error.dissenyService.consultantDomini=Error consultant el domini
 error.dissenyService.enumNoDefinida=L'enumeració '{0}' no està definida
 error.dissenyService.dominiNoDefinit=El domini '{0}' no està definit
 
-error.documentService.formatIncorrecte=El format del token és incorrecte
+error.document.obtenir=Error al obtenir el document
 
 error.dtoConverter.consultarDomini=No s'ha pogut consultar el domini
 
