--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -975,6 +975,7 @@ tasca.doc.data=Data
 tasca.doc.guardar=Guardar
 tasca.doc.doc_marcats=Els documents marcats amb
 tasca.doc.generar.auto.confirm=El document generat s'adjuntarà automàticament a l'expedient. Voleu continuar?
+tasca.doc.zip=Descarregar documents comprimits en ZIP
 
 tasca.form.confirmacio=Estau segur que voleu donar per bones les dades d'aquesta tasca?
 tasca.form.dades_form=Dades del formulari
