mid: 0000219 msg: Optimitzar consultes de domini a les tasques
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@345 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -616,6 +616,7 @@ defproc.campform.dades_accio=Dades de l'acció
 defproc.campform.selec_hand=Seleccioni un handler
 defproc.campform.handler=Handler
 defproc.campform.ocult=Ocult
+defproc.campform.cache_text=Mantenir valor de la consulta
 
 defproc.campllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.campllistat.validacions=Validacions
