mid: 0000224 msg: Actualització del jar d'integració amb custòdia
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@358 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -194,6 +194,7 @@ txt.exportacio.tipusExpedient=Exportació Tipus d'Expedient
 info.arxiu.desplegat=L'arxiu s'ha desplegat amb èxit
 
 info.document.esborrat=El document s'ha esborrat correctament
+info.document.esborrats=Els documents s'han esborrat correctament
 
 info.doc.tasca.afegit=S'ha afegit el document a la tasca
 info.doc.tasca.esborrat=S'ha esborrat el document de la tasca
@@ -228,6 +229,7 @@ info.enum.valors.importats=Els valors s'han importat correctament
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
+info.accio.executades=Les accions s'han executat correctament
 
 info.dada.creat=La dada s'ha creat correctament
 
@@ -237,11 +239,13 @@ info.dada.tasca.esborrada=La dada ha estat esborrada de la tasca
 info.dada.modificat=La dada s'ha modificat correctament
 
 info.document.adjuntat=El document s'ha adjuntat correctament
+info.document.adjuntats=Els documents s'han adjuntat correctament
 
 info.doc.proces.esborrat=El document ha estat esborrat del procés
 info.signatura.esborrat=La signatura s'ha esborrat correctament
 
 info.document.guardat=El document s'ha guardat correctament
+info.document.guardats=Els documents s'ha guardat correctament
 
 info.informacio.modificat=La informació s'ha modificat correctament
 
@@ -307,8 +311,11 @@ info.tasca.delegada=La tasca ha estat delegada amb èxit
 info.delegacio.cancelat=La delegació s'ha cancel·lat correctament
 
 info.dades.form.guardat=Les dades del formulari s'han guardat correctament
+info.dades.form.guardades=Les dades dels formularis s'han guardat correctament
 info.formulari.validat=El formulari s'ha validat correctament
+info.formulari.validats=Els formularis s'han validat correctament
 info.formulari.restaurat=El formulari s'ha restaurat correctament
+info.formulari.restaurats=Els formularis s'han restaurat correctament
 
 ### MISSATGES JSP ###
 
