mid: 0000243 msg: Error al adjuntar una nova variable a l'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@384 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -270,3 +270,5 @@ error.update.proces.ko=Contacti amb el seu administrador abans d'utilitzar l'apl
 
 error.arxiu.no.valid=El format de l'arxiu no és correcte
 error.no.tasques.selec=Ha de seleccionar alguna tasca per a la tramitació massiva
+
+error.codi.var.incorrecte=El codi de la variable no pot començar per majúscula, amb un nombre o amb accent.
