mid: 0000233 msg: Millorar la funcionalitat de retrocedir expedients
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@398 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -124,12 +124,58 @@ expedient.registre.entitat=Entitat
 expedient.registre.missatge=Descripció
 expedient.registre.valorVell=Valor antic
 expedient.registre.valorNou=Valor nou
+expedient.log=Registre d'accions
+expedient.log.accio=Acció
+expedient.log.accio.PROCES_VARIABLE_CREAR=Crear variable al procés
+expedient.log.accio.PROCES_VARIABLE_MODIFICAR=Modificar variable del procés
+expedient.log.accio.PROCES_VARIABLE_ESBORRAR=Esborrar variable del procés
+expedient.log.accio.PROCES_DOCUMENT_AFEGIR=Afegir document al procés
+expedient.log.accio.PROCES_DOCUMENT_MODIFICAR=Modificar document del procés
+expedient.log.accio.PROCES_DOCUMENT_ESBORRAR=Esborrar document del procés
+expedient.log.accio.PROCES_DOCUMENT_ADJUNTAR=Adjuntar document al procés
+expedient.log.accio.PROCES_SCRIPT_EXECUTAR=Executar script al procés
+expedient.log.accio.PROCES_ACTUALITZAR=Actualitzar versió del procés
+expedient.log.accio.TASCA_REASSIGNAR=Canviar responsable de la tasca
+expedient.log.accio.TASCA_FORM_GUARDAR=Guardar dades de la tasca
+expedient.log.accio.TASCA_FORM_VALIDAR=Validar dades de la tasca
+expedient.log.accio.TASCA_FORM_RESTAURAR=Restaurar dades de la tasca
+expedient.log.accio.TASCA_ACCIO_EXECUTAR=Executar accio de la tasca
+expedient.log.accio.TASCA_DOCUMENT_AFEGIR=Afegir document a la tasca
+expedient.log.accio.TASCA_DOCUMENT_MODIFICAR=Modificar document de la tasca
+expedient.log.accio.TASCA_DOCUMENT_ESBORRAR=Esborrar document de la tasca
+expedient.log.accio.TASCA_DOCUMENT_SIGNAR=Signar document de la tasca
+expedient.log.accio.TASCA_COMPLETAR=Completar tramitació de la tasca
+expedient.log.accio.TASCA_SUSPENDRE=Suspendre execució de la tasca
+expedient.log.accio.TASCA_CONTINUAR=Continuar execució de la tasca
+expedient.log.accio.TASCA_CANCELAR=Cancel·lar execució de la tasca
+expedient.log.accio.EXPEDIENT_INICIAR=Iniciar expedient
+expedient.log.accio.EXPEDIENT_MODIFICAR=Modificar dades de l'expedient
+expedient.log.accio.EXPEDIENT_ATURAR=Aturar tramitació de l'expedient
+expedient.log.accio.EXPEDIENT_REPRENDRE=Reprendre tramitació de l'expedient
+expedient.log.accio.EXPEDIENT_RELACIO_AFEGIR=Afegir expedient relacionat
+expedient.log.accio.EXPEDIENT_RELACIO_ESBORRAR=Esborrar expedient relacionat
+expedient.log.accio.EXPEDIENT_ACCIO=Executar acció de l'expedient
+expedient.log.accio.EXPEDIENT_RETROCEDIR=Retrocedir accions de l'expedient
+expedient.log.objecte=Element
+expedient.log.objecte.TASCA=Tasca
+expedient.log.objecte.PROCES=Procés
+expedient.log.objecte.EXPEDIENT=Expedient
+expedient.log.info=Informació
+expedient.log.info.variable=Variable
+expedient.log.info.document=Document
+expedient.log.info.accio=Acció
+expedient.log.info.abans=Abans
+expedient.log.info.despres=Després
+expedient.log.info.opcio=Opció
+expedient.log.info.missatges=Missatges
+expedient.log.retrocedir=Retrocedir expedient fins a aquesta acció (inclosa)
+expedient.log.retroces.mostrar=Veure accions retrocedides
+expedient.log.retroces.llistat=Accions retrocedides
 expedient.tasca.reassignar=Reassignar tasca
 expedient.tasca.expresio_assignacio=Expressió d'assignació
 expedient.relacionar.ok=L'expedient s'ha relacionat correctament
 expedient.relacio.esborrar.ok=La relació s'ha esborrat correctament
-
-
+expedient.log.confirm.retrocedir=Estau segur que voleu retrocedir l'expedient fins a aquesta acció (inclosa)?
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
 comuns.georeferencia.coordenades=Coordenades georeferència
