mid: 0000230 msg: Permisos d'expedient per grup
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@399 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -58,6 +58,8 @@ expedient.editar.entrada_num=Entrada núm.
 expedient.editar.responsable=Responsable
 expedient.editar.comentari=Comentari
 expedient.editar.estat=Estat
+expedient.editar.area_codi=Codi d'àrea
+expedient.editar.grup_codi=Codi de grup
 expedient.termini.terminis=Terminis
 expedient.termini.nom=Nom
 expedient.termini.durada=Durada
@@ -176,6 +178,19 @@ expedient.tasca.expresio_assignacio=Expressió d'assignació
 expedient.relacionar.ok=L'expedient s'ha relacionat correctament
 expedient.relacio.esborrar.ok=La relació s'ha esborrat correctament
 expedient.log.confirm.retrocedir=Estau segur que voleu retrocedir l'expedient fins a aquesta acció (inclosa)?
+expedient.tipus.form.crear_nou=Crear nou tipus d'expedient
+expedient.tipus.form.modificar=Modificar tipus d'expedient
+expedient.tipus.form.codi=Codi
+expedient.tipus.form.titol=Títol
+expedient.tipus.form.amb_titol=Amb títol
+expedient.tipus.form.demana_titol=Demana títol
+expedient.tipus.form.amb_num=Amb número
+expedient.tipus.form.demana_num=Demana número
+expedient.tipus.form.expressio=Expressió per calcular el número
+expedient.tipus.form.seq_actual=Seqüència actual
+expedient.tipus.form.seq_reiniciar=Reiniciar seqüència anualment
+expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuari
+
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
 comuns.georeferencia.coordenades=Coordenades georeferència
