mid: 0000257 msg: No es poden visualitzar les alertes d'altres usuaris
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@409 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -467,6 +467,10 @@ alerta.llistat.text=Text
 alerta.llistat.data_limit=Data límit
 alerta.llistat.marcar_llegida=Marcar com a llegida
 alerta.llistat.marcar_no=Marcar com a no llegida
+alerta.llistat.select_tipus.titol=Veure totes les alertes d'un tipus d'expedient
+alerta.llistat.select_tipus.seleccioni=Seleccioni un tipus d'expedient
+alerta.llistat.select_tipus.mostrar=Mostrar
+alerta.llistat.destinatari=Destinatari
 
 area.form.crear_nova=Crear nova àrea
 area.form.modificar=Modificar àrea
