mid: 0000231 msg: Nou permís en el tipus d'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@410 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -567,6 +567,7 @@ common.tabsexptipus.integ_forms=Integració amb forms
 common.tabsexptipus.enumeracions=Enumeracions
 common.tabsexptipus.dominis=Dominis
 common.tabsexptipus.consultes=Consultes
+common.tabsexptipus.documents=Documents
 
 common.tabstasca.confirmacio=Estau segur que voleu cancel·lar la delegació?
 common.tabstasca.heu_delegat=Heu delegat aquesta tasca
@@ -895,6 +896,9 @@ exptipus.formext.url=Url del servei d'integració amb formularis externs
 exptipus.formext.usuari=Usuari del servei
 exptipus.formext.contrasenya=Contrasenya del servei
 exptipus.formext.noaut=Si no necessita autenticació es pot deixar en blanc
+
+exptipus.docs.select.seleccioni=Seleccioni una definició de procés
+exptipus.docs.defproc=Definició de procés
 
 festiu.cal.festius=Festius
 festiu.cal.any_selec=Any seleccionat
