mid: 0000259 msg: Tramitació massiva d'expedients: Canvia de versió
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@413 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -272,3 +272,6 @@ error.arxiu.no.valid=El format de l'arxiu no és correcte
 error.no.tasques.selec=Ha de seleccionar alguna tasca per a la tramitació massiva
 
 error.codi.var.incorrecte=El codi de la variable no pot començar per majúscula, amb un nombre o amb accent.
+
+error.no.tiexep.selec=No hi ha cap tipus d'expedient seleccionat 
+error.no.exp.selec=No ha seleccionat cap expedient
