--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -25,6 +25,10 @@ expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris e
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
 expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
 expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
+expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
+expedient.consulta.massiva.activar=Activar accions massives
+expedient.consulta.massiva.desactivar=Desactivar accions massives
+expedient.consulta.massiva.accions=Executar accions massives
 
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
@@ -190,6 +194,12 @@ expedient.tipus.form.expressio=Expressió per calcular el número
 expedient.tipus.form.seq_actual=Seqüència actual
 expedient.tipus.form.seq_reiniciar=Reiniciar seqüència anualment
 expedient.tipus.form.restringir_grup=Restringir accés segons el grups de l'usuari
+
+expedient.massiva.titol=Execució d'accions massives
+expedient.massiva.info=Expedients seleccionats
+expedient.massiva.canvi=Canviar selecció
+expedient.massiva.actualitzar=Canviar versió del procés principal
+xpedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
