mid: 0000232 msg: Generació d'un report funcional
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@415 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -613,6 +613,7 @@ consulta.camps.confirmacio=Estau segur que voleu esborrar aquest registre?
 consulta.camps.afegir_var=Afegir variable
 consulta.camps.selec_def=Sense definició de procés
 consulta.camps.variable=Variable
+consulta.camps.mostrarxml=Descarregar report
 
 consulta.form.crear_nova=Crear nova consulta
 consulta.form.modificar=Modificar consulta
