mid:	0000287 msg:	Poder provar dominis
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@437 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -25,11 +25,10 @@ expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris e
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
 expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
 expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
-expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
+expedient.consulta.confirm.desanular=Estau segur que voleu tornar a activar aquest expedient?
 expedient.consulta.massiva.activar=Activar accions massives
 expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
-
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
 expedient.dada.variable=Variable
@@ -301,7 +300,7 @@ info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
 info.accio.executades=Les accions s'han executat correctament
-
+info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 
 info.dada.proces.esborrada=La dada ha estat esborrada del procés
@@ -446,7 +445,12 @@ comuns.anular=Anul·lar
 comuns.guardar=Guardar
 comuns.adjunts=Adjunts
 comuns.grup=Grup
-
+comuns.desanular=Activar
+comuns.readfrom = Read From
+comuns.writeto = Write To
+comuns.required = Required
+comuns.readonly = Read Only
+comuns.desar=Desar
 comuns.camps_marcats=Els camps marcats amb
 comuns.camp_oblig=Camp obligatori
 comuns.def_proces=Definició de procés
@@ -767,6 +771,7 @@ defproc.llistat.esborrar_darrera=Esborrar darrera versió
 defproc.tascacamps.confirmacio=Estau segur que voleu esborrar aquest camp de la tasca?
 defproc.tascacamps.vars_tasca=Variables de la tasca
 defproc.tascacamps.afegir_var=Afegir variable
+defproc.tascacamps.mod_var=Modificar variable
 defproc.tascacamps.selec_var=Seleccioni una variable
 defproc.tascacamps.variable=Variable
 defproc.tascacamps.llegir_del=Llegir del procés (rf)
@@ -851,6 +856,9 @@ domini.form.usuari=Usuari
 domini.form.contrasenya=Contrasenya
 domini.form.prop.usuari=Propietat amb l'usuari
 domini.form.prop.contrasenya=Propietat amb la contrasenya
+domini.form.ping=Ping
+domini.form.provar=Provar
+
 
 domini.llistat.dominis=Dominis
 domini.llistat.confirmacio=Estau segur que voleu esborrar aquest domini?
@@ -1160,7 +1168,8 @@ error.tornau=Per favor, tornau
 error.enrere=enrere
 error.i_provau=i provau novament a executar la mateixa petició en uns instants.
 error.si_persist=Si l'error persisteix posau-vos en contacte amb l'administrador de l'aplicació.
-
+error.activar.expedient = Hi ha hagut un error a l'hora d'activar el expedient
+error.permissos.desanular.expedients = No teniu permís per activar l'expedient
 login.autenticacio=Autenticació
 login.usuari=Usuari
 login.contrasenya=Contrasenya
