MID: 288 MSG: Lentitud en expedients de mida gran
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@441 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -29,6 +29,7 @@ error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a cont
 error.camp.enumdom.buit=S'ha d'especificar una enumeració o un domini
 error.camp.enumdom.ambdos=Només s'ha d'especificar un domini o una enumeració
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
+error.info.expedient.imatgeproces=No hi ha imatge per a aquesta definició de procés
 
 error.validator=Error intern de validació
 
