mid: 0000298 msg: Tramitació massiva d'expedients: Execució d'accions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@460 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -199,8 +199,13 @@ expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
 expedient.massiva.canvi=Canviar selecció
 expedient.massiva.actualitzar=Canviar versió del procés principal
-xpedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
+expedient.massiva.accions=Executar acció
+expedient.massiva.mos_ocul=Mostrar/ocultar llistat d'expedients
+expedient.massiva.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquests processos?
+expedient.massiva.confirm_exec_accio=Estau segur que voleu executar l'acció en aquests expedients?
 expedient.massiva.tots=Tots
+expedient.massiva.exec_accio=Executar acció
+
 
 comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
@@ -301,6 +306,7 @@ info.enum.valors.importats=Els valors s'han importat correctament
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.accio.executat=L'acció s'ha executat correctament
+info.accio.executat.nprimers=L'acció s'ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
@@ -325,6 +331,7 @@ info.script.executat=L'script s'ha executat correctament
 info.expedient.aturat=L'expedient s'ha aturat correctament
 info.expedient.repres=L'expedient s'ha représ correctament
 info.canvi.versio.realitzat=El canvi de versió s'ha realitzat correctament
+info.canvi.versio.realitzat.nprimers=El canvi de versió s'ha realitzat correctament en els primers {0} expedients
 
 info.expedient.iniciat=L'expedient s'ha iniciat correctament
 
