mid: 0000296 msg: Possibilitat de reindexar expedients des d'un Handler
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@462 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -162,6 +162,7 @@ expedient.log.accio.EXPEDIENT_RELACIO_AFEGIR=Afegir expedient relacionat
 expedient.log.accio.EXPEDIENT_RELACIO_ESBORRAR=Esborrar expedient relacionat
 expedient.log.accio.EXPEDIENT_ACCIO=Executar acció de l'expedient
 expedient.log.accio.EXPEDIENT_RETROCEDIR=Retrocedir accions de l'expedient
+expedient.log.accio.PROCES_DOCUMENT_SIGNAR=Procesar document del portasignatures
 expedient.log.objecte=Element
 expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
