MID:	0000313 MSG:	En consulta avançada d'expedients, afegir nova funcionalitat d'accions massives i treure report dels expedients seleccionats
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@515 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -29,7 +29,8 @@ expedient.consulta.confirm.desanular=Estau segur que voleu tornar a activar aque
 expedient.consulta.massiva.activar=Activar accions massives
 expedient.consulta.massiva.desactivar=Desactivar accions massives
 expedient.consulta.massiva.accions=Executar accions massives
-
+expedient.consulta.massiva.seleccio.activar=Activar selecció
+expedient.consulta.massiva.seleccio.desactivar=Desactivar selecció
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
 expedient.dada.variable=Variable
@@ -714,6 +715,7 @@ defproc.campform.dades_accio=Dades de l'acció
 defproc.campform.selec_hand=Seleccioni un handler
 defproc.campform.handler=Handler
 defproc.campform.ocult=Ocult
+defproc.campform.ignored=No retrocedir valor
 defproc.campform.cache_text=Mantenir valor de la consulta
 
 defproc.campllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
@@ -1084,6 +1086,7 @@ tasca.doc.generar.auto.confirm=El document generat s'adjuntarà automàticament a 
 tasca.doc.zip=Descarregar documents comprimits en ZIP
 
 tasca.form.confirmacio=Estau segur que voleu donar per bones les dades d'aquesta tasca?
+tasca.form.confirmacioValidacio=Estau segur que voleu donar per bones les dades d'aquesta tasca i finalitzar-la?
 tasca.form.dades_form=Dades del formulari
 tasca.form.error_ini=Error d'inici de formulari
 tasca.form.verif_signa=Verificació de signatures
