MID:	0000316 MSG:	Redirecció de tasques per al tipus d'expedient. 		Actualment existeix la possibilitat de redireccionar tasques a nivell global de l'aplicació (per preveure baixes i vacances). S'hauria de permetre definir 		aquestes redireccions a nivell de tipus d'expedient. L'usuari responsable del tipus d'expedient serà l'encarregat de definir aquestes redireccions.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@522 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -593,6 +593,7 @@ common.tabsexptipus.enumeracions=Enumeracions
 common.tabsexptipus.dominis=Dominis
 common.tabsexptipus.consultes=Consultes
 common.tabsexptipus.documents=Documents
+common.tabsexptipus.redireccio=Redirecció
 
 common.tabstasca.confirmacio=Estau segur que voleu cancel·lar la delegació?
 common.tabstasca.heu_delegat=Heu delegat aquesta tasca
@@ -1051,6 +1052,10 @@ reassign.llistat.usu_origen=Usuari origen
 reassign.llistat.usu_dest=Usuari destí
 reassign.llistat.reassignació=reassignació
 reassign.llistat.nova=Nova reassignació
+reassign.llistat.tipusExpedientId=Id tipus expedient
+reassign.llistat.data_ini=Data inici
+reassign.llistat.data_fi=Data fi
+reassign.llistat.titol=Introduir nova redirecció
 
 rol.form.crear_nou=Crear nou rol
 rol.form.modificar=Modificar rol
