mid: 0000318 msg: Ocultar expedients a les consultes per tipus
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.4@525 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -637,6 +637,7 @@ consulta.form.selec_tipus=Seleccioni un tipus d'expedient
 consulta.form.informe=Informe
 consulta.form.valors=Valors predefinits
 consulta.form.exportar=Exportar actiu?
+consulta.form.ocultar=Oculta?
 
 consulta.llistat.confirmacio=Estau segur que voleu esborrar aquesta consulta?
 consulta.llistat.vars_filtre=Variables del filtre
