mid: 0000325 msg: Camp de tipus select i consultes per tipus
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@544 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -26,8 +26,8 @@ error.expedient.numerorepetit=Ja existeix un expedient d'aquest tipus amb el mat
 error.expedient.relacio.esborrar=Error al esborrar la relació de l'expedient
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
-error.camp.enumdom.buit=S'ha d'especificar una enumeració o un domini
-error.camp.enumdom.ambdos=Només s'ha d'especificar un domini o una enumeració
+error.camp.enumdomcons.buit=S'ha d'especificar una enumeració, un domini o una consulta
+error.camp.enumdomcons.tots=Només s'ha d'especificar un domini, una enumeració o una consulta
 error.permis.codi.repetit=Ja existeix un altre rol amb aquest codi
 error.info.expedient.imatgeproces=No hi ha imatge per a aquesta definició de procés
 
