--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -710,7 +710,8 @@ defproc.campform.enumeracio=Enumeració
 defproc.campform.selec_domini=Seleccioni un domini
 defproc.campform.domini=Domini
 defproc.campform.id_domini=Id del domini
-defproc.campform.param_domini=Paràmetres pel domini
+defproc.campform.param_domini=Paràmetres del domini
+defproc.campform.param_consulta=Paràmetres de la consulta
 defproc.campform.camp_text=Camp amb el text
 defproc.campform.camp_valor=Camp amb el valor
 defproc.campform.dades_accio=Dades de l'acció
@@ -719,6 +720,8 @@ defproc.campform.handler=Handler
 defproc.campform.ocult=Ocult
 defproc.campform.ignored=No retrocedir valor
 defproc.campform.cache_text=Mantenir valor de la consulta
+defproc.campform.selec_consulta=Seleccioni una consulta
+defproc.campform.consultes.tipus=Consulta per tipus
 
 defproc.campllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.campllistat.validacions=Validacions
