mid: 0000326 msg: Permetre editar el valor d'enumeracions i estats
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.5@554 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -349,6 +349,7 @@ info.tipus.exp.esborrat=El tipus d'expedient s'ha esborrat correctament
 info.defproc.marcat.inicial=La definició de procés '{0}' s'ha marcat com a inicial
 
 info.estat.creat=L'estat s'ha creat correctament
+info.estat.guardat=L'estat s'ha guardat correctament
 info.estat.esborrat=L'estat s'ha esborrat correctament
 
 info.tipus.exp.guardat=El tipus d'expedient s'ha guardat correctament
@@ -919,6 +920,8 @@ enumeracio.valors.import_dades=Importació de dades
 enumeracio.valors.mostrar_ocultar=Mostrar/Ocultar
 enumeracio.valors.arxiu_exp=Arxiu a importar
 enumeracio.valors.importar=Importar
+
+estats.form.titol=Modificar estat
 
 exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
 exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
